# sifty

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml  release.yml  welcome.yml
docs/: ARCHITECTURE.md  RELEASING.md  demo.tape
packaging/: README.md
packaging/scoop/: sifty.json
packaging/winget/: Vortrix5.Sifty.installer.yaml  Vortrix5.Sifty.locale.en-US.yaml  Vortrix5.Sifty.yaml
scripts/: bump_version.py
site/: CNAME  index.html  robots.txt  sitemap.xml  style.css
site/alternatives/: ccleaner.html
site/guides/: index.html
src/sifty/: __init__.py  __main__.py  cli.py  config.py  console.py  logsetup.py  safety.py
src/sifty/ai/: __init__.py  advisor.py  agent.py  client.py  tools.py
src/sifty/cli/: app.py
src/sifty/cli/commands/: ai_group.py  cleanup.py  junk.py  organize.py  profile.py  watch.py
src/sifty/commands/: __init__.py  ai_group.py  apps.py  disk.py  junk.py  organize.py  updates.py
src/sifty/core/: checkup.py  cleanup.py  disk.py  history.py  junk.py  models.py  monitor.py  optimize.py  organize.py  profiles.py  safety.py  schedule.py  selfupdate.py  vcs.py  watch.py
src/sifty/infra/: config.py
src/sifty/tui/: app.py  commands.py  state.py  styles.tcss
src/sifty/tui/screens/: __init__.py  path_picker.py
src/sifty/tui/views/: __init__.py  ai.py  apps.py  cleanup.py  disk.py  group.py  home.py  junk.py  optimize.py  purge.py  reports.py  startup.py  updates.py
src/sifty/windows/: hyperv.py  notify.py
tests/: test_agent.py  test_agent_extra.py  test_ai_client.py  test_ai_context.py  test_ai_tools_handlers.py  test_checkup.py  test_cleanup.py  test_cli_actions.py  test_disk.py  test_junk.py  test_leftovers.py  test_logsetup.py  test_optimize.py  test_optimize_engine.py  test_organize.py  test_path_picker.py  test_profiles.py  test_purge.py  test_registry_scan.py  test_safety.py  test_selfupdate.py  test_startup.py  test_tools.py  test_tui.py  test_updates.py  test_vcs.py  test_watch.py  test_windows_layer.py  test_windows_registry.py
