[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sifty"
version = "0.1.0"
description = "Sifty — an AI-assisted Windows maintenance CLI: sift junk, analyze disk, manage apps, updates and files."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Amine Zouaoui" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "send2trash>=1.8",
    "pywin32>=306; sys_platform == 'win32'",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
sifty = "sifty.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
