[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sifty"
version = "0.6.0"
description = "Windows maintenance CLI/TUI: sift junk, analyze disks, manage apps, updates and files. Recycle Bin only, dry-run by default."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Amine Zouaoui" }]
license = { text = "MIT" }
keywords = [
    "windows", "maintenance", "cleaner", "junk", "disk-usage", "duplicates",
    "uninstaller", "winget", "tui", "textual", "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "psutil>=5.9",
    "send2trash>=1.8",
    "pywin32>=306; sys_platform == 'win32'",
    "winshell>=0.6; sys_platform == 'win32'",
    "windows-toasts>=1.1; sys_platform == 'win32'",
    "httpx>=0.27",
    "textual>=0.60",
]

[project.urls]
Homepage = "https://github.com/Vortrix5/sifty"
Repository = "https://github.com/Vortrix5/sifty"
Issues = "https://github.com/Vortrix5/sifty/issues"
Changelog = "https://github.com/Vortrix5/sifty/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
    "ruff>=0.4",
]

[project.scripts]
sifty = "sifty.cli.app:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sifty = ["tui/*.tcss"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length is advisory; Rich markup strings run long
    "B008",  # `typer.Option(...)` in defaults is Typer's standard idiom
]
